--- a/styles.css
+++ b/styles.css
@@ -74,4 +74,23 @@ nav ul li a:hover::after {
 
 .navbar{
     background-color: beige;
+    font-size: 1.5rem;
+}
+
+.toggle-button{
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar{
+    border-radius: 10px;
+    height: 3px;
+    width: 100%;
+    background-color: black;
 }
